--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,11 @@
     "flydotio",
     "linebreak",
     "malformatted",
+    "maxlength",
+    "nodeexpressprojects",
     "releveler",
-    "tcaer"
+    "tcaer",
+    "willremovethissoon",
+    "xfwck"
   ]
 }
