--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
-    "mongoose-unique-validator": "^4.0.0"
+    "mongoose-unique-validator": "^4.0.0",
+    "password-validator": "^5.3.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.2.7",
