added Cypress for E2E testing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
     "malformatted",
     "maxlength",
     "nodeexpressprojects",
+    "Noteapp",
     "releveler",
+    "Salva",
     "tcaer",
     "Togglable",
     "willremovethissoon",
