--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,5 @@ sketch
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 **/build/
+**/cypress/videos
+**/db.json
